// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`main snapshot renders 1`] = `
<WithStyles(UiLayout)>
  <div>
    <WithStyles(PreviewPrompt) />
  </div>
  <WithStyles(CorrectAnswerToggle)
    onToggle={[Function]}
    toggled={false}
  />
  <Component
    onChange={[Function]}
    selectedTokens={Array []}
    text="foo"
    tokens={Array []}
  />
</WithStyles(UiLayout)>
`;

exports[`main snapshot renders rationale 1`] = `
<WithStyles(UiLayout)>
  <div>
    <WithStyles(PreviewPrompt) />
  </div>
  <WithStyles(CorrectAnswerToggle)
    onToggle={[Function]}
    toggled={false}
  />
  <Component
    onChange={[Function]}
    selectedTokens={Array []}
    text="foo"
    tokens={Array []}
  />
</WithStyles(UiLayout)>
`;

exports[`main snapshot renders showCorrect 1`] = `
<WithStyles(UiLayout)>
  <div>
    <WithStyles(PreviewPrompt) />
  </div>
  <WithStyles(CorrectAnswerToggle)
    onToggle={[Function]}
    toggled={true}
  />
  <Component
    onChange={[Function]}
    selectedTokens={Array []}
    text="foo"
    tokens={Array []}
  />
</WithStyles(UiLayout)>
`;
